--- a/vignettes/eyetools.Rmd
+++ b/vignettes/eyetools.Rmd
@@ -25,8 +25,13 @@ The eyetools package is designed to provide a consistent set of functions that h
 
 You can install eyetools using the following code:
 
+```{r, eval=FALSE}
+install.packages('eyetools')
+```
 
-```{r, eval=FALSE, include=FALSE}
+Or if you like, you can install the latest version from Github:
+
+```{r, eval=FALSE}
 
 if (!require(devtools)) {
   install.packages("devtools")
