--- a/README.Rmd
+++ b/README.Rmd
@@ -49,6 +49,7 @@ Available functions in the latest CRAN version:
 | `combine_eyes()`          | Combines binocular data (i.e., average or “best eye”)  into monocular data                           |
 | `compare_algorithms()`    | Provides a comparison between the dispersion and VTI fixation algorithms with correlations and plot  |
 | `conditional_transform()` | Implements a single-axis flip for specific trials to normalise data with counterbalanced designs     |
+| `create_AOI_df()`.        | Create a blank data frame for populating with AOIs                                                   |
 | `fixation_dispersion()`   | Dispersion algorithm for fixation detection                                                          |
 | `fixation_VTI()`          | An algorithm that subtracts saccadic periods for fixation detection                                  |
 | `hdf5_to_df()`            | converts eyetracking data retrieved from TOBII eyetrackers to a dataframe                            |
